# verity-cordon

./: .env.example  .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.codex-plugin/: plugin.json
.specify/: feature.json  integration.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
apps/control-room/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/control-room/src/: main.tsx  styles.css
docs/decisions/: 0001-codex-first-scope.md  0002-event-sourcing-over-snapshots.md  0003-controlled-memory-plane.md  0004-gpt-semantic-adjudication.md  0005-post-hackathon-deferrals.md  0006-codex-subscription-provider.md  0007-desktop-first-demo.md
docs/hackathon/: BASELINE_COMPARISON.md  CODEX_COLLABORATION.md  DEMO_SCRIPT.md  DESKTOP_REHEARSAL_RECORD.md  HACKATHON_WORK.md  SUBMISSION_CHECKLIST.md  SUBMISSION_DRAFT.md  VIDEO_EVIDENCE.md
docs/product/: glossary.md  positioning.md  post-hackathon-roadmap.md
docs/security/: cryptographic-claims.md  threat-model.md  trust-boundaries.md
evals/datasets/: README.md  memory-poisoning-fixtures-v1.json
evals/expected/: semantic-fixtures.json
evals/results/: latest.json  latest.md
evals/runners/: __init__.py  run_fixture_evaluation.py
evals/runners/tests/: test_fixture_evaluation.py
examples/detector-plugin/: README.md  pyproject.toml
examples/detector-plugin/src/verity_cordon_demo_detector/: __init__.py  detector.py
examples/detector-plugin/tests/: test_detector_plugin.py
examples/poisoned-docs-mcp/: README.md  pyproject.toml
examples/poisoned-docs-mcp/src/poisoned_docs_mcp/: __init__.py  __main__.py  server.py
examples/poisoned-docs-mcp/tests/: test_server.py
hooks/: hooks.json
scripts/: bootstrap.sh  demo-desktop.sh  demo-live.sh  demo-offline.sh  verify.sh
specs/001-codex-memory-firewall/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-codex-memory-firewall/checklists/: demo-readiness.md  hackathon-compliance.md  requirements.md  security.md
specs/001-codex-memory-firewall/contracts/: codex-hook-contract.md  detector-result.schema.json  event-envelope.schema.json  memory-candidate.schema.json  policy.schema.json  semantic-assessment.schema.json  verity-ipc.openapi.yaml
specs/002-codex-desktop-subscription-defense/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-codex-desktop-subscription-defense/checklists/: demo-readiness.md  requirements.md  security.md  subscription-provider.md
specs/002-codex-desktop-subscription-defense/contracts/: codex-subscription-provider.md  desktop-demo-contract.md  desktop-demo-receipt.schema.json
src/verity_cordon/: __init__.py  demo.py
tests/: __init__.py  factories.py
tests/adversarial/: __init__.py  test_codex_subscription_isolation.py  test_delayed_poisoning.py  test_ledger_tampering.py  test_streaming.py
tests/contract/: test_artifact_schemas.py  test_codex_hooks.py  test_control_room_api.py  test_desktop_demo_receipt.py  test_desktop_demo_setup.py  test_subscription_provider_compatibility.py
tests/end_to_end/: test_demo.py  test_desktop_demo_contract.py  test_desktop_memory_defense.py  test_desktop_shadow_recovery.py
tests/integration/: test_codex_subscription_semantic.py  test_detector_plugins.py  test_event_store.py  test_memory_pipeline.py  test_openai_semantic.py  test_projection_integrity.py  test_rescan.py  test_revocation.py  test_shadow_mode.py
tests/unit/: test_cli.py  test_codex_subscription_auth.py  test_codex_subscription_events.py  test_codex_subscription_prompts.py  test_codex_subscription_runner.py  test_crypto.py  test_desktop_system_readiness.py  test_detectors.py  test_evidence_queue_config.py  test_executable_trust.py  test_idempotency.py  test_injection.py  test_policy.py  test_safe_display.py  test_semantic.py  test_semantic_readiness.py  test_telemetry.py
(+96 files in other folders)
