[build-system]
requires = ["hatchling>=1.29,<2"]
build-backend = "hatchling.build"

[project]
name = "verity-cordon-demo-detector"
version = "0.1.0"
description = "Local reference detector plugin for Verity Cordon"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Verity Cordon contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = ["verity-cordon>=0.1,<0.2"]

[project.entry-points."verity_cordon.detectors"]
demo-synthetic-sink = "verity_cordon_demo_detector:create_detector"

[dependency-groups]
test = ["pytest>=9.1,<10"]

[tool.hatch.build.targets.wheel]
packages = ["src/verity_cordon_demo_detector"]
